--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "derogab",
   "license": "MIT",
   "dependencies": {
+    "axios": "1.7.2",
     "cron": "3.1.7",
     "dotenv": "16.4.5",
     "grammy": "1.27.0",
