--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "cron": "3.1.7",
     "dotenv": "16.4.5",
     "grammy": "1.27.0",
-    "redis": "4.6.13"
+    "redis": "4.6.13",
+    "yaml": "2.8.1"
   },
   "devDependencies": {
     "@types/node": "^24.3.0",
